--- a/views/date.erb
+++ b/views/date.erb
@@ -4,6 +4,6 @@
         <title></title>
     </head>
     <body>
-        <p>The date is Date.today.strftime([format='%A, %B %d, %Y']).</p>
+        <p>The date is <%= Time.now.strftime('%A, %B %d, %Y') %>.</p>
     </body>
 </html>
